tests/analyze/enum-keyword-name/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Unexpected token (keyword `let`). Expected an identifier.
> 4 | enum let { a; b }
           ^^^

